--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.2-dev - (unreleased)
+----------------------
+
 4.1 - (2011-11-21)
 ------------------
 * Bug fix: Removed themes from ExternalDataSpec schema as this CT gets themes
