--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.2-dev - (unreleased)
 ----------------------
+* Cleanup: Fixed all pylint, pyflakes warnings
+  [voineali]
 
 4.1 - (2011-11-21)
 ------------------
