Refs #8731; added workaround for failure to get filename for images, used in RSS enclosures

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 ----------------------
 * Cleanup: Fixed all pylint, pyflakes warnings
   [voineali]
+* Bug fix: added workaround for failure to get filename for RSS enclosures
+ [tiberich #4746]
 
 4.1 - (2011-11-21)
 ------------------
