--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -7,6 +7,7 @@ Changelog
   already provided by the geotags subtyper [tiberich #4763]
 * Bug fix: hide metadata fields for quickevent [tiberich #4763]
 * Bug fix: make all fields appear in the default schemata [tiberich #4763]
+* Bug fix: show location when viewing a QuickEvent [tiberich #4763]
 
 4.2 - (2011-11-22)
 ------------------
