--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.6-dev - (unreleased)
 ----------------------
+ * Bug fix: show only date in event_view and quickevent_view [tiberich #4763]
 
 4.5 - (2011-11-28)
 ------------------
