--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,7 @@ Changelog
 ----------------------
 * Bug fix: Made location, themes and subject language independant
   [voineali #4776]
+* Bug fix: fix error that caused zope created ContentManager users not able to access site [tiberich]
 
 4.7 - (2011-11-29)
 ------------------
