--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.10-dev - (unreleased)
+-----------------------
+
 4.9 - (2011-12-07)
 ------------------
  * Bug fix: disabled press release text from pressroom view [ichimdav #4619]
