Refs #8674   - Updated @@invalidate_cache browser view to use plone.app.caching.   - Cleanup deprecated code.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 4.10-dev - (unreleased)
 -----------------------
+* Bug fix: Updated @@invalidate_cache browser view to use plone.app.caching
+  [voineali #4689]
+
 * Bug fix: Fixed events map JS
   [voineali #4798]
 
