--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.11-dev - (unreleased)
 -----------------------
+ * Bug fix: fixed quickevent view [tiberich #4839]
 
 4.10 - (2011-12-15)
 -------------------
