--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.12-dev - (unreleased)
+-----------------------
+
 4.11 - (2011-12-16)
 -------------------
  * Bug fix: fixed quickevent view [tiberich #4839]
