--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.13-dev - (unreleased)
+-----------------------
+
 4.12 - (2012-01-03)
 -------------------
  * Bug fix: updated email address for jobs enquiries [tiberich #4845]
