Change version for Products.EEAContentTypes to 4.14-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.14-dev - (unreleased)
+-----------------------
+
 4.13 - (2012-01-10)
 -------------------
  * Bug fix: added an override utility for p4a.videoembed that will not change
