--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.14-dev - (unreleased)
 -----------------------
+ * Bug fix: fixed rss feed for at topics [tiberich #4992]
  * Bug fix: Fixed location field and widget on Event content types
    [ghicaale #4913]
  * Bug fix: Fixed iCal export for Event content types
