Refs #8801; added warning messag for the crop dialog, changed button message to be the same as the info message; style changes to the crop pop-up; added history info to docs about this ticket

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.14-dev - (unreleased)
 -----------------------
+ * Feature: added 16:9 crop functionality for IExternalHighlight contentTypes
+   [ichimdav #4816]
  * Bug fix: fixed rss feed for at topics [tiberich #4992]
  * Bug fix: Fixed location field and widget on Event content types
    [ghicaale #4913]
