--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.15-dev - (unreleased)
+-----------------------
+
 4.14 - (2012-02-06)
 -------------------
  * Feature: added 16:9 crop functionality for IExternalHighlight contentTypes
