--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.15-dev - (unreleased)
 -----------------------
+ * Change: disabled crop functionality until it is better tested to ensure 
+   that no issues would arrive from using it [ichimdav]
 
 4.14 - (2012-02-06)
 -------------------
