--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.16-dev - (unreleased)
+-----------------------
+
 4.15 - (2012-02-06)
 -------------------
  * Change: disabled crop functionality until it is better tested to ensure 
