--- a/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEAContentTypes/trunk/docs/HISTORY.txt
@@ -5,8 +5,7 @@ Changelog
 -----------------------
  * Feature: Changed GIS Application to be disk based product instead of TTW type [tiberich #4467]
  * Feature: added arcgis_id field to GIS Application [tiberich #4467]
- * Upgrade step: import portal_setup step: profile "EEA Content Types", 
-   choose upgrade step "EEAContentTypes: Migrate GIS Application content".
+ * Upgrade step: go to /prefs_install_products_form and upgrade EEAContentTypes to version 4.16
 
 4.15 - (2012-02-06)
 -------------------
