Change version for Products.EEAContentTypes to 4.17-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.17-dev - (unreleased)
+-----------------------
+
 4.16 - (2012-02-15)
 -------------------
  * Feature: Added possibility to disable the application form for vacancy.
