Refs #8921; added empty display_in_datacentre for ExternalPromotions to avoid check failures when using promo.display_on_datacentre

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.17-dev - (unreleased)
 -----------------------
+ * Change: added display_on_datacentre for IExternalHighlight [ichimdav #4936]
  * Feature: all GIS Application objects will provide by now 
    Products.EEAContentTypes.content.interfaces.IInteractiveMap interface
    [ghicaale #4467]
