--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.17-dev - (unreleased)
 -----------------------
+ * Change: better name for the image ratio check handler, since it is generic. 
+   [demarant #4816]
  * Change: Added minsize validator on preview image for gis map application
    [demarant #4959]
  * Change: for GIS Application use same url field for both the flash object and the url 
