Change version for Products.EEAContentTypes to 4.18-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.18-dev - (unreleased)
+-----------------------
+
 4.17 - (2012-03-05)
 -------------------
  * Feature: added cloudUrl validator which is used by the cloudUrl field for flv video
