Updated version for Products.EEAContentTypes to 4.21-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.21-dev - (unreleased)
+-----------------------
+
 4.20 - (2012-04-27)
 -------------------
  * Bug fix: added view replacement for unicodeInTest [tiberich #5106]
