Fixes #9287; customized validate_translate.vpy from Products.LinguaPlone to display error message on portlet message; to fix this current fpublication, edit the english translation at http://eea.europa.eu/publications/eea-signals-2012 and add a geotags, then edit the Maltese translation and the reports tab should have 4.2.2 as well to the management code which should validate the translation

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,10 @@
-﻿Changelog
+Changelog
 =========
 
 5.1-dev - (unreleased)
 ----------------------
+* Bug fix: display validation error when translating if error is present
+  [ichimdav #5302]
 
 5.0 - (2012-06-20)
 ------------------
