Refs #9339; use same declaration of max items in rss_template as it is in plone 4.1.5 in order to return an int value of maximum entries in the search rss instead of a boolean value

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,7 +3,9 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
-
+* Bug fix: return a number instead of a boolean for the max number in syndication
+  in order for search RSS to display more than 1 result
+  [ichimdav #5354]
 5.1 - (2012-07-13)
 ------------------
 * Feature: re-enabled eea.relations widget for Base Content
